# fullsail-csms-capstone

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: Container_Testing_Status.md  KinaTrax_Architecture_Reference.md
docs/data/: combined_results_final.csv  event_ledger_v3.csv  onprem_results_clean.csv
infrastructure/kubernetes/base/: api-deployment.yaml  api-service.yaml  kustomization.yaml  namespace.yaml
infrastructure/kubernetes/overlays/dev/: kustomization.yaml
infrastructure/terraform/modules/aws/eks/: main.tf  outputs.tf  variables.tf
monitoring/prometheus/: prometheus.yml
scripts/: collect_sample_data.py
src/api/: pyproject.toml
src/common/: pyproject.toml
src/dashboard/: Dockerfile  pyproject.toml
src/dashboard/app/: __init__.py  config.py  main.py
src/dashboard/app/components/: __init__.py  charts.py  metrics.py  tables.py
src/dashboard/app/data/: __init__.py  generators.py  loaders.py  schemas.py
src/dashboard/app/optimization/: __init__.py  pareto.py  scenarios.py
src/dashboard/app/pages/: 1_Event_Queue.py  1_Pareto_Frontier.py  2_Cost_Time_Tradeoff.py  2_Site_Comparison.py  3_Batch_Detail.py  3_Scenario_Comparison.py  4_Cost_Model.py  4_Job_Configuration.py  4_Sensitivity_Analysis.py  5_C3D_Verification.py
src/dashboard/app/simulation/: __init__.py  scheduler.py
src/dashboard/app/utils/: __init__.py  formatting.py
src/dashboard/tests/: __init__.py  test_pareto.py
src/defense-viewer/: app.py  c3d_parser.py  file_browser.py  requirements.txt  test_c3d_parser.py  test_file_browser.py
src/gcas/: pyproject.toml
src/ml/: pyproject.toml
src/processor/: pyproject.toml
