[project]
name = "kinatrax-api"
version = "0.1.0"
description = "RESTful API service for KinaTrax Cloud Pipeline event submission and status"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "kafka-python>=2.0.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.19.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.26.0",
    "pytest-asyncio>=0.23.0",
    "faker>=22.0.0",
]
