[project]
name = "kinatrax-common"
version = "0.1.0"
description = "Shared utilities, models, and configurations for KinaTrax Cloud Pipeline services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[tool.uv]
dev-dependencies = []
