[project]
name = "kinatrax-dashboard"
version = "0.1.0"
description = "Decision Support Dashboard for KinaTrax processing job configuration"
requires-python = ">=3.12"
dependencies = [
    # Core Streamlit
    "streamlit>=1.40.0",

    # Data processing and visualization
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",

    # Data models and validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Optimization
    "scipy>=1.12.0",

    # Mock data generation
    "faker>=22.0.0",

    # Logging
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
