[project]
name = "kinatrax-dashboard"
version = "2.0.0"
description = "Cloud Acceleration Decision Support Dashboard for KinaTrax biomechanical processing"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "pydantic>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
