[project]
name = "kinatrax-gcas"
version = "0.1.0"
description = "Game-Context Auto-Scaling service using MLB Statscast API for proactive resource scaling"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=29.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "schedule>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
]
