[project]
name = "kinatrax-processor"
version = "0.1.0"
description = "Event processing service for biomechanical analysis workloads"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.0.2",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
]
